[package]
name = "egui-ping-graph"
version = "0.1.0"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

egui = "0.25"
eframe = "0.25"
egui_plot = "0.25"
time = "0.3.30"
tokio = { version = "1.35.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
rand = "0.8.5"
futures-core = "0.3.30"
pinger = "1.1.0"
futures = "0.3.30"
puffin = "0.18.1"
puffin_http = "0.15.0"
statrs = "0.16.0"

[profile.dev.package."*"]
opt-level = 3
